--- a/test.ini
+++ b/test.ini
@@ -22,10 +22,37 @@ max = "10"
 md5 = "246127e046bb117c0f7cb127a0646a04"
 action = "auto"
 
-[source004]
-name = "BBC_Top_Stories_rss.xml"
-url = "http://feeds.bbci.co.uk/news/rss.xml"
-max = "10"
-md5 = "beaf5a4f2d629afc4d96259d6b51aa8a"
+[source005]
+name = "Reuters_rss.xml"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=ReutersBridge&feed=home%2Ftopnews&format=Atom"
+max = "30"
+md5 = ""
 action = "auto"
 
+[source006]
+name = "Reuters china_rss.xml"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=ReutersBridge&feed=china&format=Atom"
+max = "30"
+md5 = ""
+action = "auto"
+
+[source007]
+name = "No Mercy No Malice_rss.xml"
+url = "https://www.profgalloway.com/feed/"
+max = "30"
+md5 = ""
+action = "auto"
+
+[source008]
+name = "economist latest_rss.xml"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistBridge&context=Blogs&blog=bartleby&limit=10&format=Atom"
+max = "30"
+md5 = ""
+action = "auto"
+
+[source009]
+name = "economist this week_rss.xml"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Atom"
+max = "30"
+md5 = ""
+action = "auto"
