--- a/test.ini
+++ b/test.ini
@@ -2,10 +2,10 @@
 base = "rss/"
 
 [source001]
-name = "mckinsey_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
+name = "1111.xml"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Html"
 max = "10"
-md5 = "0c351d2429930ea7b8f4a0d3e42e378f"
+md5 = ""
 action = "auto"
 
 [source002]
