--- a/test.ini
+++ b/test.ini
@@ -3,9 +3,9 @@ base = "rss/"
 
 [source001]
 name = "1111.xml"
-url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Html"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Mrss"
 max = "10"
-md5 = "bb1257732a0707be34e4e343153830a4"
+md5 = ""
 action = "auto"
 
 [source002]
