--- a/test.ini
+++ b/test.ini
@@ -3,7 +3,7 @@ base = "rss/"
 
 [source001]
 name = "1111.xml"
-url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Mrss"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Json"
 max = "10"
 md5 = "26e0097cf1284ab6698922310025396c"
 action = "auto"
