--- a/test.ini
+++ b/test.ini
@@ -3,7 +3,7 @@ base = "rss/"
 
 [source001]
 name = "1111.xml"
-url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Json"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Atom"
 max = "10"
 md5 = "7b53a8fba9ddad3787209cdea4382450"
 action = "auto"
