--- a/test.ini
+++ b/test.ini
@@ -3,9 +3,9 @@ base = "rss/"
 
 [source001]
 name = "1111.xml"
-url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Atom"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Sfeed"
 max = "10"
-md5 = "a54339d2bf0b445bf6929526d23047c4"
+md5 = ""
 action = "auto"
 
 [source002]
