--- a/test.ini
+++ b/test.ini
@@ -2,8 +2,8 @@
 base = "rss/"
 
 [source001]
-name = "1111.xml"
-url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Sfeed"
+name = "Reuters_world.xml"
+url = "https://rsshub.app/reuters/world"
 max = "10"
 md5 = "68dc27b8cc185f92509dd2afacbe8251"
 action = "auto"
