--- a/test.ini
+++ b/test.ini
@@ -9,11 +9,11 @@ md5 = "c1fe65574b9162f599a54012fab6432b"
 action = "auto"
 
 [source002]
-name = "mckinsey_iw_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
+name = "33.xml"
+url = "https://rsshub.app/reuters/world"
 max = "10"
 md5 = "1b515814fb5d0c6b4d2785df501f6466"
-action = "en->iw"
+action = "auto"
 
 [source003]
 name = "nature_rss.xml"
