--- a/test.ini
+++ b/test.ini
@@ -9,10 +9,10 @@ md5 = "c1fe65574b9162f599a54012fab6432b"
 action = "auto"
 
 [source002]
-name = "33.xml"
-url = "https://rsshub.app/reuters/world"
+name = "44.xml"
+url = "https://rss-bridge.org/bridge01/?action=display&bridge=EconomistWorldInBriefBridge&limit=100&agenda=on&agendaPictures=on&format=Atom"
 max = "10"
-md5 = "c1fe65574b9162f599a54012fab6432b"
+md5 = ""
 action = "auto"
 
 [source003]
